<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoogleSignInActivity">

    <ImageView
        android:id="@+id/imageView_GoogleSignUpBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/starbucks_pattern" />

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="403dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText_GoogleFirstName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_borders"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editText_firstName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <EditText
            android:id="@+id/editText_GoogleLastName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_borders"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editText_lastName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <EditText
            android:id="@+id/editText_GoogleUsername"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_borders"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editText_username"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <Button
            android:id="@+id/button_GoogleSignUpSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_signUp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/white" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>