<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".WelcomeActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="418dp"
            android:layout_height="133dp"
            android:layout_marginBottom="470dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/starbucks_pattern" />

        <View
            android:id="@+id/divider2"
            android:layout_width="418dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="469dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="135dp"
            android:layout_height="128dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/avatar" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

            <TextView
                android:id="@+id/textView_userFirstNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editText_firstName"
                android:textAlignment="center"
                android:textColor="@color/lightGray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView_userFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/textView_userLastNameLabel"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/editText_lastName"
                android:textColor="@color/lightGray"
                android:textAlignment="center"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textView_userLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView_userEmailAddressLabel"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/editText_emailAddress"
                android:textColor="@color/lightGray"
                android:textAlignment="center"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textView_userEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView_userUsernameLabel"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/editText_username"
                android:textColor="@color/lightGray"
                android:textAlignment="center"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textView_userUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"/>


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>